--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <script src="p5/p5.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <script src="js/imageUpload.js"></script>
+    <script src="js/modelManager.js"></script>
     <script src="sketch.js"></script>
     <title>P5.js Project</title>
   </head>
