--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
   <head>
     <script src="p5/p5.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-    <script src="js/constants.js"></script>
-    <script src="js/classes/Predictive.js"></script>
     <script src="js/modelManager.js"></script>
-    <script src="js/imageUpload.js"></script>
-    <script src="js/webcam.js"></script>
     <script src="sketch.js"></script>
+    <!-- <script src="js/trainSketch.js"></script> -->
     <title>P5.js Project</title>
   </head>
   <body>
